--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@nestjs/schedule": "^2.0.1",
     "@nestjs/typeorm": "^8.1.4",
     "@types/passport-jwt": "^3.0.6",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "faker": "^6.6.6",
     "kafkajs": "^2.1.0",
     "mysql2": "^2.3.3",
