--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/schedule": "^2.0.1",
     "@nestjs/typeorm": "^8.1.4",
     "@types/passport-jwt": "^3.0.6",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "faker": "^6.6.6",
@@ -51,6 +52,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/faker": "^6.6.9",
